ArchiveRelocationTest.java failed: Archive mapping should always succeed

XMLWordPrintable

    • b25
    • x86_64
    • windows

      The following test failed in the JDK14 CI:

      runtime/cds/appcds/ArchiveRelocationTest.java

      Here's a snippet from the log file:

      ============================================================
      case = 2, dump = false, run = true
      ============================================================
      Command line: [c:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-14+24-1102\\windows-x64-debug.jdk\\jdk-14\\fastdebug\\bin\\java.exe -cp T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\classes\\1\\runtime\\cds\\appcds\\ArchiveRelocationTest.d;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-14+24-1102\\src.full\\open\\test\\hotspot\\jtreg\\runtime\\cds\\appcds;T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\classes\\1\\test\\lib;T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\classes\\1\\test\\hotspot\\jtreg\\runtime\\cds\\appcds\\test-classes;C:\\ade\\mesos\\work_dir\\jib-master\\install\\java\\re\\jtreg\\4.2\\promoted\\all\\b14\\bundles\\jtreg_bin-4.2.zip\\jtreg\\lib\\javatest.jar;C:\\ade\\mesos\\work_dir\\jib-master\\install\\java\\re\\jtreg\\4.2\\promoted\\all\\b14\\bundles\\jtreg_bin-4.2.zip\\jtreg\\lib\\jtreg.jar -XX:MaxRAMPercentage=3 -Xshare:off -showversion -cp T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\scratch\\5\\hello.jar -Xshare:dump -XX:SharedArchiveFile=T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\scratch\\5\\appcds-18h35m47s229.jsa -XX:ExtraSharedClassListFile=T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\classes\\1\\runtime\\cds\\appcds\\ArchiveRelocationTest.d\\ArchiveRelocationTest-test.classlist -XX:+UnlockDiagnosticVMOptions -showversion -Xlog:cds=debug,cds+reloc=debug ]
      [2019-11-20T18:35:47.229491500Z] Gathering output for process 5228
      [ELAPSED: 3197 ms]
      [logging stdout to ArchiveRelocationTest-0002-dump.stdout]
      [logging stderr to ArchiveRelocationTest-0002-dump.stderr]
      [STDERR]

      Command line: [c:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-14+24-1102\\windows-x64-debug.jdk\\jdk-14\\fastdebug\\bin\\java.exe -cp T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\classes\\1\\runtime\\cds\\appcds\\ArchiveRelocationTest.d;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-14+24-1102\\src.full\\open\\test\\hotspot\\jtreg\\runtime\\cds\\appcds;T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\classes\\1\\test\\lib;T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\classes\\1\\test\\hotspot\\jtreg\\runtime\\cds\\appcds\\test-classes;C:\\ade\\mesos\\work_dir\\jib-master\\install\\java\\re\\jtreg\\4.2\\promoted\\all\\b14\\bundles\\jtreg_bin-4.2.zip\\jtreg\\lib\\javatest.jar;C:\\ade\\mesos\\work_dir\\jib-master\\install\\java\\re\\jtreg\\4.2\\promoted\\all\\b14\\bundles\\jtreg_bin-4.2.zip\\jtreg\\lib\\jtreg.jar -XX:MaxRAMPercentage=3 -Xshare:off -showversion -Xshare:on -showversion -XX:SharedArchiveFile=T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\scratch\\5\\appcds-18h35m47s229.jsa -Dtest.timeout.factor=4.0 -cp T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\scratch\\5\\hello.jar -XX:+UnlockDiagnosticVMOptions -XX:ArchiveRelocationMode=1 -Xlog:cds=debug,cds+reloc=debug Hello ]
      [2019-11-20T18:35:50.426307300Z] Gathering output for process 4448
      [ELAPSED: 78 ms]
      [logging stdout to ArchiveRelocationTest-0003-exec.stdout]
      [logging stderr to ArchiveRelocationTest-0003-exec.stderr]
      [STDERR]
      An error has occurred while processing the shared archive file.
      Unable to map shared spaces

      [2019-11-20T18:35:50.504402Z] Waiting for completion for process 4448
      [2019-11-20T18:35:50.520056900Z] Waiting for completion finished for process 4448
      ----------System.err:(24/1715)----------
      jtreg.SkippedException: Unable to map shared archive: test did not complete
      at jdk.test.lib.cds.CDSTestUtils.checkMappingFailure(CDSTestUtils.java:371)
      at jdk.test.lib.cds.CDSTestUtils$Result.<init>(CDSTestUtils.java:130)
      at TestCommon.run(TestCommon.java:407)
      at ArchiveRelocationTest.test(ArchiveRelocationTest.java:80)
      at ArchiveRelocationTest.main(ArchiveRelocationTest.java:44)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:298)
      at java.base/java.lang.Thread.run(Thread.java:833)
      java.lang.RuntimeException: Archive mapping should always succeed after JDK-8231610 (did the machine run out of memory?)
      at ArchiveRelocationTest.main(ArchiveRelocationTest.java:48)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:298)
      at java.base/java.lang.Thread.run(Thread.java:833)

      JavaTest Message: Test threw exception: java.lang.RuntimeException
      JavaTest Message: shutting down test

      result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Archive mapping should always succeed after JDK-8231610 (did the machine run out of memory?)

            Assignee:
            Ioi Lam
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: