8234539: ArchiveRelocationTest.java failed: Archive mapping should always succeed

Reviewed-by: ccheung